# GIRAFFE

./: .gitignore  CMakeLists.txt  Comp-NURBS.xlsx  Comp-Poliedro_-3.xlsx  LICENSE  README.md  build.bat  build1.bat  build2.bat  build3.bat  build4.bat  install_dependencies.bat  ~$Comp-Poliedro_-4.xlsx
documentation/tutorials/tutorial01/: tutorial01.inp
documentation/tutorials/tutorial02/: tutorial02.inp
documentation/tutorials/tutorial03/: tutorial03.inp
documentation/tutorials/tutorial06/: tutorial06.inp
documentation/tutorials/tutorial07/: tutorial07.inp
documentation/tutorials/tutorial09/: tutorial09.inp
documentation/tutorials/tutorial12/: Bolster_tutorial.stl  tutorial12.inp
documentation/tutorials/tutorial14/: tutorial14.inp
documentation/tutorials/tutorial15/: tutorial15.inp
documentation/tutorials/tutorial16/: tutorial16.inp
inputs/tutorial04/: tutorial04.inp
inputs/tutorial05/: tutorial05.inp
inputs/tutorial08/: tutorial08.inp
inputs/tutorial10/: tutorial10.inp
inputs/tutorial11/: tutorial11.inp
inputs/tutorial12/: Eixo_tutorial.stl  Sideright_tutorial.stl
inputs/tutorial13/: tutorial13.inp
src/: AerodynamicData.cpp  AerodynamicData.h  AnalyticalSurface.cpp  AnalyticalSurface.h  ArcCirc.cpp  ArcCirc.h  ArcExtrusion.cpp  ArcExtrusion.h  ArcRevolution.cpp  ArcRevolution.h  BEM.cpp  BEM.h  BandMatrix.cpp  BandMatrix.h  Base64.cpp  Base64.h  Beam_1.cpp  Beam_1.h  BodyGeometry.cpp  BodyGeometry.h  BoolTable.cpp  BoolTable.h  Boundary.cpp  Boundary.h  BoundingBoxAxesAligned.cpp  BoundingBoxAxesAligned.h  BoundingBoxAxesOriented.cpp  BoundingBoxAxesOriented.h  BoundingCylinder.cpp  BoundingCylinder.h  BoundingSphere.cpp  BoundingSphere.h  BoundingTriangularBox.cpp  BoundingTriangularBox.h  BoundingVolume.cpp  BoundingVolume.h  Box.cpp  Box.h  CADData.cpp  CADData.h  (+360 more)
